re PR middle-end/54515 (cc1plus sigsegv -O2 anonymous namespace)

2012-09-10  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR middle-end/54515
	* tree-sra.c (disqualify_base_of_expr): Check for possible
	NULL_TREE returned by get_base_address()

	* g++.dg/tree-ssa/pr54515.C: new testcase

From-SVN: r191131